# HMI-clone

./: .gitignore  CMakeLists.txt  README.md  main.cpp  radialbar.cpp  radialbar.h  run.sh
qml/: ChargingStationDistance.qml  DataViewModel.qml  Indicators.qml  MainScreen.qml  MapModel.qml  RadialBarShape.qml  SpeedometerTemplate.qml  Style.qml  TurnSignals.qml  main.qml  qml.qrc
